samples/_failures_safe/1761714374_9730b7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bdddd63b.c: In function ‘main’:
./samples/SAFE/__tmp_bdddd63b.c:165:9: error: expected expression at end of input
  165 |         handle_string,
      |         ^~~~~~~~~~~~~
./samples/SAFE/__tmp_bdddd63b.c:165:9: error: expected declaration or statement at end of input
